# atlas

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
atlas/: __init__.py  config.py
atlas/alignment/: __init__.py  grpo.py  ppo.py  reward.py  rollout.py  sft.py
atlas/cli/: finetune.py  pretrain.py  reward.py  rl.py  sample.py
atlas/data/: __init__.py  dataset.py  preferences.py  sft.py  tokenizer.py
atlas/inference/: __init__.py  generate.py
atlas/model/: __init__.py  attention.py  block.py  ffn.py  kv_cache.py  moe.py  norm.py  policy.py  reward.py  rope.py  transformer.py
atlas/training/: __init__.py  checkpointing.py  logger.py  optimizer.py  scheduler.py  trainer.py
configs/: ppo.yaml  pretrain_small.yaml  sft.yaml
tests/: test_alignment.py  test_data.py  test_model.py  test_moe.py  test_training.py
